[package]
name = "letter-boxed"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
flate2 = "1.0.28"
serde = "1.0.193"
serde_qs = "0.12.0"
shuttle-axum = { version = "0.35.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.0"
tokio = "1.28.2"
tracing = "0.1.40"
